--- a/index.html
+++ b/index.html
@@ -45,11 +45,20 @@
     <style>
         span{
             font-size: 50px;
+            display: block;
+            color: brown;
         }
     </style>
 
     <div>
         <span>thank you Jesus</span>
+
+        <span>thank you Jesus</span>
+
+        <span>thank you Jesus</span>
+        <span>thank you Jesus</span>
+
+        
     </div>
     </body>
 </html>
